--- a/viridian/reef/Makefile
+++ b/viridian/reef/Makefile
@@ -13,8 +13,8 @@ GREEN=\033[32m
 YELLOW=\033[33m
 RESET=\033[0m
 
-SANDBOX_IMAGE := submerged-bullseye-latest
-SANDBOX_CONTAINER := submerged-cli-sandbox
+SANDBOX_IMAGE := reef-bullseye-latest
+SANDBOX_CONTAINER := reef-cli-sandbox
 
 
 
@@ -26,28 +26,25 @@ help:
 
 
 build:
-	@ # Build submerged locally
+	@ # Build reef locally
 	cargo build
 .PHONY: build
 
 run:
-	@ # Run submerged locally
+	@ # Run reef locally
 	cargo run --bin standard
 .PHONY: run
 
 sandbox:
-	@ # Run submerged in Docker sandbox image
-	if [ ! -d "../../caerulean/whirlpool/certificates" ]; then
-		cd ../../caerulean/whirlpool && ${SHELL} whirlpool.sh -z -a 8.8.8.8 && cd ../../viridian/submerged
-	fi
+	@ # Run reef in Docker sandbox image
 	# docker build --tag ${SANDBOX_IMAGE} --file Dockerfile ../..
-	# docker run --privileged -it --rm --network=host --name ${SANDBOX_CONTAINER} --volume ./src:/seaside/viridian/submerged/src ${SANDBOX_IMAGE}
+	# docker run --privileged -it --rm --network=host --name ${SANDBOX_CONTAINER} --volume ./src:/seaside/viridian/reef/src ${SANDBOX_IMAGE}
 .PHONY: sandbox
 
 
 
 clean:
-	@ # Clean all submerged build artifacts
+	@ # Clean all reef build artifacts
 	rm -rf target
 	rm -f Cargo.lock
 	docker rm -f ${SANDBOX_CONTAINER}
