--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -20,7 +20,7 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.8.1,<3.12"
 colorama = "^0.4.6"
 
 [tool.poetry.group.client.dependencies]
@@ -30,22 +30,21 @@ betterproto = "^2.0.0b6"
 pycryptodome = "^3.18.0"
 
 [tool.poetry.group.devel.dependencies]
-pytest = "^7.3.1"
+pytest = "^8.3.2"
 pythonping = "^1.1.4"
 pytest-asyncio = "^0.23.5"
 pytest-timeout = "^2.2.0"
-pytest-dependency = "^0.5.1"
+pytest-dependency = "^0.6.0"
 
 [tool.poetry.group.script.dependencies]
 mypy = "^1.3.0"
-flake8 = "^3.9.2"
-black = "^20.8b1"
+flake8 = "^7.1.0"
+black = "^24.4.2"
 isort = "^5.11.0"
-pyinstaller = "^5.11.0"
-python-on-whales = "^0.65.0"
+pyinstaller = "^6.9.0"
+python-on-whales = "^0.72.0"
 grpcio-tools = "^1.62.0"
-pyOpenSSL = "^24.0.0"
-types-pyOpenSSL = "^24.0.0.20240130"
+cryptography = "^43.0.0"
 betterproto = { version = "^2.0.0b6", extras = ["compiler"] }
 
 
