minor changes from another branch

--- a/.dockerignore
+++ b/.dockerignore
@@ -30,5 +30,6 @@ viridian/algae/docker/Dockerfile.*
 viridian/algae/docker/test.conf.env
 viridian/algae/scripts
 viridian/algae/sources/generated
+viridian/algae/sources/__init__.py
 viridian/algae/poetry.lock
 viridian/algae/README.md
