--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -24,7 +24,7 @@ RUN poetry install --without client,devel
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN mkdir generated && poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=generated vessels/*.proto
+RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
 
 
 FROM ubuntu:22.04 as default-sleeping
@@ -41,7 +41,7 @@ COPY --from=builder /seaside/algae/requirements.txt ./
 RUN pip install --upgrade --no-cache-dir pip -r requirements.txt
 
 # Copy algae and test sources, also copy generated protobuf files.
-COPY --from=builder /seaside/algae/generated ./sources/generated/
+COPY --from=builder /seaside/algae/ ./sources/
 COPY viridian/algae/sources/*.py ./sources/
 COPY viridian/algae/tests/*.py ./tests/
 RUN touch __init__.py sources/__init__.py tests/__init__.py
@@ -53,7 +53,7 @@ ENV SEASIDE_CTRLPORT=
 ENV SEASIDE_TUNNEL_NAME seatun
 ENV SEASIDE_MIN_HC_TIME 1
 ENV SEASIDE_MAX_HC_TIME 5
-ENV SEASIDE_CONNECTION_TIMEOUT 3
+ENV SEASIDE_CONNECTION_TIMEOUT 3.0
 
 # Just sleep - run nothing.
 ENTRYPOINT sleep infinity
