--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,13 @@
+# General
+
+.github/
+.markdownlint.yaml
+bump-version.sh
+LICENCE
+Makefile
+README
+
+
 # Caerulean
 
 ## Whirlpool
@@ -11,7 +21,6 @@ caerulean/whirlpool/example.conf.env
 caerulean/whirlpool/go.sum
 caerulean/whirlpool/Makefile
 caerulean/whirlpool/README.md
-caerulean/whirlpool/whirlpool.sh
 caerulean/whirlpool/conf.env
 
 
