--- a/viridian/algae/docker/compose.base.yml
+++ b/viridian/algae/docker/compose.base.yml
@@ -21,7 +21,8 @@ services:
     container_name: seaside-whirlpool
     privileged: true
     build:
-      dockerfile: Dockerfile.whirlpool
+      dockerfile: viridian/algae/docker/Dockerfile.whirlpool
+      context: ../../..
       target: smoke
     env_file:
       - test.conf.env
