--- a/viridian/reef/Makefile
+++ b/viridian/reef/Makefile
@@ -5,16 +5,13 @@
 SHELL=/bin/bash
 .SHELLFLAGS=-c -e
 
-DOCKER_BUILDKIT = 1
-
 BOLD=\033[1m
 BLUE=\033[34m
 GREEN=\033[32m
 YELLOW=\033[33m
 RESET=\033[0m
 
-SANDBOX_IMAGE := reef-bullseye-latest
-SANDBOX_CONTAINER := reef-cli-sandbox
+SEASIDE_ADDRESS := 10.87.82.87
 
 
 
@@ -32,14 +29,19 @@ build:
 
 run:
 	@ # Run reef locally
-	cargo run --bin cli
+	cargo run --features cli-exec --bin cli
 .PHONY: run
 
 
 
 test-integration:
 	@ # Run reef integration tests in Docker
+	bash ../../caerulean/whirlpool/whirlpool.sh -za ${SEASIDE_ADDRESS}
+	docker compose -f ../algae/docker/compose.default.yml build whirlpool
 	docker compose -f docker/compose.yml up --build
+	docker rm -f seaside-reef seaside-echo seaside-external-router seaside-internal-router seaside-whirlpool
+	docker network rm seaside-reef_sea-cli-int seaside-reef_sea-rout-ext seaside-reef_sea-rout-int seaside-reef_sea-serv-ext
+	docker rmi -f seaside-reef-reef seaside-reef-echo seaside-reef-ext-router seaside-reef-int-router seaside-reef-whirlpool
 .PHONY: test-integration
 
 test: test-integration
@@ -51,6 +53,4 @@ clean:
 	@ # Clean all reef build artifacts
 	rm -rf target
 	rm -f Cargo.lock
-	docker rm -f ${SANDBOX_CONTAINER}
-	docker rmi -f ${SANDBOX_IMAGE}
 .PHONY: clean
