--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -69,7 +69,7 @@ build-docker-prod:
 
 run-docker: build-docker-prod
 	@ # Run executable inside of the production Docker image
-	docker run --privileged -it --rm --name seaside-whirlpool-run --env-file example.conf.env --network host seaside-whirlpool-prod ../..
+	docker run --privileged -it --rm --name seaside-whirlpool-run --env-file example.conf.env --sysctl net.ipv6.conf.all.disable_ipv6=1 --network host seaside-whirlpool-prod ../..
 .PHONY: run-docker
 
 
@@ -85,15 +85,15 @@ endif
 
 lint: build-docker-test
 	@ # Run lint inside of the testing docker container
-	docker run --privileged --rm --name seaside-whirlpool-lint --env-file example.conf.env --entrypoint golint seaside-whirlpool-test .
+	docker run --privileged --rm --name seaside-whirlpool-lint --env-file example.conf.env --sysctl net.ipv6.conf.all.disable_ipv6=1 --entrypoint golint seaside-whirlpool-test .
 .PHONY: lint
 
 test: build-docker-test
 	@ # Run tests inside of the testing docker container
 ifndef CI
-	docker run --privileged --rm --name seaside-whirlpool-test --env-file example.conf.env --entrypoint go seaside-whirlpool-test test -v ./...
+	docker run --privileged --rm --name seaside-whirlpool-test --env-file example.conf.env --sysctl net.ipv6.conf.all.disable_ipv6=1 --entrypoint go seaside-whirlpool-test test -v ./...
 else
-	docker run --privileged --rm --name seaside-whirlpool-test --env-file example.conf.env --entrypoint go seaside-whirlpool-test test ./...
+	docker run --privileged --rm --name seaside-whirlpool-test --env-file example.conf.env --sysctl net.ipv6.conf.all.disable_ipv6=1 --entrypoint go seaside-whirlpool-test test ./...
 endif
 .PHONY: test
 
