--- a/viridian/reef/docker/Dockerfile.reef
+++ b/viridian/reef/docker/Dockerfile.reef
@@ -17,12 +17,12 @@ COPY viridian/reef/Cargo.toml viridian/reef/Cargo.toml
 COPY viridian/reef/build.rs viridian/reef/build.rs
 COPY viridian/reef/src viridian/reef/src
 
-RUN . $HOME/.cargo/env && cargo build --bin cli --manifest-path viridian/reef/Cargo.toml
+RUN . $HOME/.cargo/env && cargo build --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml
 
 
 FROM ubuntu:22.04 as test
 
-WORKDIR /seaside
+WORKDIR /seaside/viridian
 
 ARG NETWORK_GATEWAY
 ENV ARG_NETWORK_GATEWAY $NETWORK_GATEWAY
@@ -34,8 +34,20 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y --no-install-recommends iptables iproute2 python3-pip && rm -rf /var/lib/apt/lists/* && pip install --no-cache-dir pytest
 COPY viridian/algae/tests/conftest.py viridian/algae/tests/test_local.py tests/
+COPY --from=builder /seaside/viridian/reef/target/debug/cli CLI_executable
 
-COPY --from=builder /seaside/viridian/reef/target/debug/cli exec/cli
-ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY && exec/cli
+VOLUME /seaside/viridian/ca
+
+ENV SEASIDE_PAYLOAD_VIRIDIAN=
+ENV SEASIDE_ADDRESS=
+ENV SEASIDE_CTRLPORT=
+
+ENV SEASIDE_TUNNEL_NAME=seatun
+ENV SEASIDE_MIN_HC_TIME=1
+ENV SEASIDE_MAX_HC_TIME=5
+ENV SEASIDE_CONNECTION_TIMEOUT=3.0
+
+ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY && \
+    ./CLI_executable -a $SEASIDE_ADDRESS -c $SEASIDE_CTRLPORT -p $SEASIDE_PAYLOAD_VIRIDIAN
 
 HEALTHCHECK --interval=1m --timeout=1s --retries=3 --start-period=10s --start-interval=3s CMD ls /sys/class/net | grep tun0
