--- a/viridian/reef/Makefile
+++ b/viridian/reef/Makefile
@@ -11,8 +11,6 @@ GREEN=\033[32m
 YELLOW=\033[33m
 RESET=\033[0m
 
-SEASIDE_ADDRESS := 10.87.82.87
-
 
 
 help:
@@ -36,12 +34,10 @@ run:
 
 test-integration:
 	@ # Run reef integration tests in Docker
-	bash ../../caerulean/whirlpool/whirlpool.sh -za ${SEASIDE_ADDRESS}
-	docker compose -f ../algae/docker/compose.default.yml build whirlpool
-	docker compose -f docker/compose.yml up --build
-	docker rm -f seaside-reef seaside-echo seaside-external-router seaside-internal-router seaside-whirlpool
-	docker network rm seaside-reef_sea-cli-int seaside-reef_sea-rout-ext seaside-reef_sea-rout-int seaside-reef_sea-serv-ext
-	docker rmi -f seaside-reef-reef seaside-reef-echo seaside-reef-ext-router seaside-reef-int-router seaside-reef-whirlpool
+	bash ../../caerulean/whirlpool/whirlpool.sh -za "$$(yq '.services.whirlpool.environment.SEASIDE_ADDRESS' docker/compose.yml)" 2> /dev/null
+	docker compose -f ../algae/docker/compose.default.yml build whirlpool 2> /dev/null
+	docker compose -f docker/compose.yml up --build --abort-on-container-exit --exit-code-from reef
+	rm -rf certificates
 .PHONY: test-integration
 
 test: test-integration
@@ -51,6 +47,9 @@ test: test-integration
 
 clean:
 	@ # Clean all reef build artifacts
-	rm -rf target
+	rm -rf target certificates
 	rm -f Cargo.lock
+	docker rm -f seaside-reef seaside-echo seaside-external-router seaside-internal-router seaside-whirlpool
+	docker network rm seaside-reef_sea-cli-int seaside-reef_sea-rout-ext seaside-reef_sea-rout-int seaside-reef_sea-serv-ext
+	docker rmi -f seaside-reef-reef seaside-reef-echo seaside-reef-ext-router seaside-reef-int-router seaside-reef-whirlpool
 .PHONY: clean
