--- a/viridian/algae/docker/compose.base.yml
+++ b/viridian/algae/docker/compose.base.yml
@@ -16,8 +16,11 @@ services:
     env_file:
       - test.conf.env
     environment:
+      SEASIDE_ROOT_CERTIFICATE_AUTHORITY: /seaside/viridian/ca/rootCA.crt
       BUFFER_SIZE: 8192  # Buffer for echo server message storing
       ECHO_PORT: 5000  # Port for echo server accessing
+    volumes:
+      - ../certificates/client:/seaside/viridian/ca:ro
 
   whirlpool:
     image: seaside-whirlpool-smoke
@@ -31,6 +34,8 @@ services:
       - test.conf.env
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=1
+    volumes:
+      - ../certificates/server:/seaside/caerulean/certificates:ro
 
   echo:
     image: seaside-echo-smoke
