--- a/viridian/algae/docker/compose.integration.yml
+++ b/viridian/algae/docker/compose.integration.yml
@@ -11,8 +11,11 @@ services:
     env_file:
       - test.conf.env
     environment:
+      SEASIDE_ROOT_CERTIFICATE_AUTHORITY: /seaside/viridian/ca/rootCA.crt
       RESTRICTED_ADDRESS: 1.1.1.1
       SEASIDE_ADDRESS: 10.87.65.87
+    volumes:
+      - ../certificates/client:/seaside/viridian/ca:ro
     networks:
       sea-client:
         ipv4_address: 10.65.0.65
