--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -17,10 +17,10 @@ dns-lookup = "2.0.4"
 neli = "0.6.4"
 iptables = "0.5.1"
 gethostname = "^0.5.0"
-tun2 = { version = "3.1.0", features = ["async"] }
-tonic = { version = "0.12.2", features = ["tls", "tls-webpki-roots"] }
-tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
-structopt = { version = "0.3.26", optional = true }
+tun2 = { version = "^3.1.0", features = ["async"] }
+tonic = { version = "^0.12.2", features = ["tls", "tls-webpki-roots"] }
+tokio = { version = "^1.37.0", features = ["macros", "rt-multi-thread", "process", "signal"] }
+structopt = { version = "^0.3.26", optional = true }
 
 [features]
 cli-exec = ["structopt"]
