--- a/viridian/reef/docker/compose.yml
+++ b/viridian/reef/docker/compose.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: ../../..
       dockerfile: viridian/reef/docker/Dockerfile
-      target: test
+      target: integration
       args:
         NETWORK_GATEWAY: 10.82.0.100
     environment:
@@ -25,6 +25,8 @@ services:
         ipv4_address: 10.82.0.82
     volumes:
       - ../certificates/client:/seaside/viridian/ca:ro
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=1
     depends_on:
       whirlpool:
         condition: service_healthy
