--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -9,30 +9,34 @@ authors = [
 
 
 [dependencies]
-rand = "0.8.5"
-prost = "0.13.2"
-env_logger = "0.11.5"
-prost-types = "0.13.1"
-dns-lookup = "2.0.4"
-neli = "0.6.4"
-iptables = "0.5.1"
+rand = "^0.8.5"
+prost = "^0.13.3"
+log = "^0.4.22"
+env_logger = "^0.11.5"
+prost-types = "^0.13.3"
+dns-lookup = "^2.0.4"
+neli = "^0.6.4"
+iptables = "^0.5.1"
 gethostname = "^0.5.0"
-tun2 = { version = "^3.1.0", features = ["async"] }
-tonic = { version = "^0.12.2", features = ["tls", "tls-webpki-roots"] }
-tokio = { version = "^1.37.0", features = ["macros", "rt-multi-thread", "process", "signal"] }
+chacha20poly1305 = "^0.10.1"
+simple-error = "^0.3.1"
+tun = { version = "^0.7.1", features = ["async"] }
+tonic = { version = "^0.12.3", features = ["tls", "tls-webpki-roots"] }
+tokio = { version = "^1.41.0", features = ["macros", "rt-multi-thread", "process", "signal"] }
 structopt = { version = "^0.3.26", optional = true }
 
 [features]
 cli-exec = ["structopt"]
 
 [build-dependencies]
-tonic-build = "0.12.1"
+tonic-build = "0.12.3"
 
 [dev-dependencies]
 bollard = "0.17.0"
 compose-rs = "0.0.3"
 rcgen = "0.13.1"
 test-context = "0.3.0"
+regex = "^1.11.1"
 
 
 [lib]
