--- a/viridian/reef/Makefile
+++ b/viridian/reef/Makefile
@@ -21,26 +21,36 @@ help:
 
 
 build:
-	@ # Build reef locally
-	cargo build
+	@ # Build reef locally TODO: add feature strict, checking warnings, docs, removing debug info
+	cargo build --all-features
 .PHONY: build
 
-run:
+run: build
 	@ # Run reef locally
 	cargo run --features cli-exec --bin cli
 .PHONY: run
 
 
 
+test-unit:
+	@ # Run unit tests inside of the testing docker container
+ifndef CI
+	docker build -f docker/Dockerfile --target test -t seaside-reef-test ../..
+else
+	docker build -f docker/Dockerfile --target test -t seaside-reef-test -q ../..
+endif
+	docker run --privileged --rm --name seaside-reef-test --sysctl net.ipv6.conf.all.disable_ipv6=1 --entrypoint cargo seaside-reef-test test --package reef --lib -- --nocapture --show-output
+.PHONY: test-unit
+
 test-integration:
 	@ # Run reef integration tests in Docker
-	bash ../../caerulean/whirlpool/whirlpool.sh -za "$$(yq '.services.whirlpool.environment.SEASIDE_ADDRESS' docker/compose.yml)" 2> /dev/null
-	docker compose -f ../algae/docker/compose.default.yml build whirlpool 2> /dev/null
+	bash ../../caerulean/whirlpool/whirlpool.sh -za "$$(yq -r '.services.whirlpool.environment.SEASIDE_ADDRESS' docker/compose.yml)" 2> /dev/null
+	docker compose -f ../algae/docker/compose.default.yml build whirlpool echo 2> /dev/null
 	docker compose -f docker/compose.yml up --build --abort-on-container-exit --exit-code-from reef
 	rm -rf certificates
 .PHONY: test-integration
 
-test: test-integration
+test: test-unit test-integration
 .PHONY: test
 
 
