--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -13,7 +13,7 @@ ENV PROTOC_VERSION 24.4
 ENV PROTOC_ZIP protoc-$PROTOC_VERSION-linux-x86_64.zip
 
 # Download and install latest protoc compiler and python dependencies.
-RUN apt-get update && apt-get install -y --no-install-recommends python3-pip wget unzip ca-certificates && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends python3-pip wget unzip && rm -rf /var/lib/apt/lists/*
 RUN wget -qO $PROTOC_ZIP https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/$PROTOC_ZIP && unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && unzip -o $PROTOC_ZIP -d /usr/local 'include/*' && rm -f $PROTOC_ZIP
 RUN pip install --upgrade --no-cache-dir pip poetry && poetry self add poetry-plugin-export
 
@@ -24,7 +24,7 @@ RUN poetry install --without client,devel
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
+RUN mkdir generated && poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=generated vessels/*.proto
 
 
 FROM ubuntu:22.04 as default-sleeping
@@ -41,10 +41,10 @@ COPY --from=builder /seaside/algae/requirements.txt ./
 RUN pip install --upgrade --no-cache-dir pip -r requirements.txt
 
 # Copy algae and test sources, also copy generated protobuf files.
-COPY --from=builder /seaside/algae/ ./sources/
+COPY --from=builder /seaside/algae/generated ./sources/generated/
 COPY viridian/algae/sources/*.py ./sources/
 COPY viridian/algae/tests/*.py ./tests/
-RUN touch __init__.py sources/__init__.py tests/__init__.py
+RUN touch __init__.py sources/__init__.py
 
 ENV SEASIDE_PAYLOAD_OWNER=
 ENV SEASIDE_ADDRESS=
@@ -53,7 +53,7 @@ ENV SEASIDE_CTRLPORT=
 ENV SEASIDE_TUNNEL_NAME seatun
 ENV SEASIDE_MIN_HC_TIME 1
 ENV SEASIDE_MAX_HC_TIME 5
-ENV SEASIDE_CONNECTION_TIMEOUT 3.0
+ENV SEASIDE_CONNECTION_TIMEOUT 3
 
 # Just sleep - run nothing.
 ENTRYPOINT sleep infinity
