--- a/viridian/algae/docker/compose.integration.yml
+++ b/viridian/algae/docker/compose.integration.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   algae:
     image: seaside-algae-smoke-sleeping
@@ -11,11 +13,8 @@ services:
     env_file:
       - test.conf.env
     environment:
-      SEASIDE_ROOT_CERTIFICATE_AUTHORITY: /seaside/viridian/ca/rootCA.crt
       RESTRICTED_ADDRESS: 1.1.1.1
       SEASIDE_ADDRESS: 10.87.65.87
-    volumes:
-      - ../certificates/client:/seaside/viridian/ca:ro
     networks:
       sea-client:
         ipv4_address: 10.65.0.65
@@ -51,6 +50,8 @@ services:
     environment:
       SEASIDE_ADDRESS: 10.87.65.87
       SEASIDE_EXTERNAL: 10.87.42.87
+    volumes:
+      - ./certificates:/seaside/caerulean/certificates
     networks:
       sea-router:
         ipv4_address: 10.87.65.87
