caerulean and rest updated

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -42,8 +42,9 @@ ENV SEASIDE_AUTH=auth
 ENV SEASIDE_MAX_VIRIDIANS=10
 ENV SEASIDE_MAX_ADMINS=5
 
-ENV SEASIDE_VIRIDIAN_WAITING_OVERTIME=5
-ENV SEASIDE_VIRIDIAN_FIRST_HEALTHCHECK_DELAY=3
+ENV SEASIDE_WAITING_OVERTIME=5
+ENV SEASIDE_FIRST_HEALTHCHECK_DELAY=3
+ENV SEASIDE_MAXIMUM_NEXTIN 15
 
 ENV SEASIDE_TUNNEL_MTU=1500
 ENV SEASIDE_VPN_DATA_LIMIT=-1
