--- a/caerulean/whirlpool/example.conf.env
+++ b/caerulean/whirlpool/example.conf.env
@@ -17,9 +17,11 @@ SEASIDE_MAX_ADMINS=5
 # Maximum total viridian number will be calculated as sum of the previous values
 
 # Maximum additional waiting time for healthcheck message (will be added to the 'nextIn' value)
-SEASIDE_VIRIDIAN_WAITING_OVERTIME=5
+SEASIDE_WAITING_OVERTIME=5
 # Maximum waiting time for the first healthcheck message
-SEASIDE_VIRIDIAN_FIRST_HEALTHCHECK_DELAY=3
+SEASIDE_FIRST_HEALTHCHECK_DELAY=3
+# Maximum waiting time between helathchecks, the delay before a viridian is disconnected (in seconds)
+SEASIDE_MAXIMUM_NEXTIN=15
 
 # VPN tunnel interface MTU, if <= 0 then tunnel MTU will match external IP interface MTU
 SEASIDE_TUNNEL_MTU=1500
