--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -32,7 +32,7 @@ pycryptodome = "^3.18.0"
 [tool.poetry.group.devel.dependencies]
 pytest = "^8.3.2"
 pythonping = "^1.1.4"
-pytest-asyncio = "^0.23.5"
+pytest-asyncio = "^0.24.0"
 pytest-timeout = "^2.2.0"
 pytest-dependency = "^0.6.0"
 
@@ -42,8 +42,9 @@ flake8 = "^7.1.0"
 black = "^24.4.2"
 isort = "^5.11.0"
 pyinstaller = "^6.9.0"
-python-on-whales = "^0.72.0"
+python-on-whales = "^0.73.0"
 grpcio-tools = "^1.62.0"
+PyYAML = "^6.0.2"
 betterproto = { version = "^2.0.0b6", extras = ["compiler"] }
 
 
