--- a/viridian/algae/docker/compose.local.yml
+++ b/viridian/algae/docker/compose.local.yml
@@ -73,7 +73,7 @@ services:
       SEASIDE_ADDRESS: 10.87.65.87
       SEASIDE_EXTERNAL: 10.87.42.87
     volumes:
-      - ./certificates:/seaside/caerulean/certificates
+      - ../certificates/server:/seaside/caerulean/certificates:ro
     networks:
       sea-rout-int:
         ipv4_address: 10.87.65.87
