--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -14,7 +14,6 @@ prost = "^0.13.3"
 log = "^0.4.22"
 env_logger = "^0.11.5"
 prost-types = "^0.13.3"
-dns-lookup = "^2.0.4"
 neli = "^0.6.4"
 iptables = "^0.5.1"
 gethostname = "^0.5.0"
@@ -22,7 +21,7 @@ chacha20poly1305 = "^0.10.1"
 simple-error = "^0.3.1"
 tun = { version = "^0.7.1", features = ["async"] }
 tonic = { version = "^0.12.3", features = ["tls", "tls-webpki-roots"] }
-tokio = { version = "^1.41.0", features = ["macros", "rt-multi-thread", "process", "signal"] }
+tokio = { version = "^1.41.0", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
 structopt = { version = "^0.3.26", optional = true }
 
 [features]
