--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -57,6 +57,7 @@ test-integration = "scripts.test:test_integration"
 test-smoke = "scripts.test:test_smoke"
 test-local = "scripts.test:test_local"
 test-remote = "scripts.test:test_remote"
+test-domain = "scripts.test:test_domain"
 test-all = "scripts.test:test_all"
 compile = "scripts.process:compile"
 execute = "scripts.process:execute"
