--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -47,6 +47,7 @@ ENV SEASIDE_FIRST_HEALTHCHECK_DELAY=3
 ENV SEASIDE_MAXIMUM_NEXTIN 15
 
 ENV SEASIDE_TUNNEL_MTU=1500
+ENV SEASIDE_TUNNEL_NAME=seatun
 ENV SEASIDE_VPN_DATA_LIMIT=-1
 ENV SEASIDE_CONTROL_PACKET_LIMIT=2
 ENV SEASIDE_ICMP_PACKET_LIMIT=5
