--- a/caerulean/whirlpool/example.conf.env
+++ b/caerulean/whirlpool/example.conf.env
@@ -25,6 +25,9 @@ SEASIDE_MAXIMUM_NEXTIN=15
 
 # VPN tunnel interface MTU, if <= 0 then tunnel MTU will match external IP interface MTU
 SEASIDE_TUNNEL_MTU=1500
+# VPN tunnel interface name, should not be longer than 15 characters
+SEASIDE_TUNNEL_NAME=seatun
+
 # Limit of data transferred through sea port (kbytes per second per viridian)
 SEASIDE_VPN_DATA_LIMIT=-1
 # Limit of control packets transferred through control port (packets per second per viridian)
