--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,32 +37,42 @@ jobs:
       - name: Generate Code 🚧
         run: poetry -C viridian/algae run generate
 
-      - name: Create Executable ID 📛
-        id: id-creator
+      - name: Create Executable Branch Name 🌱
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
           BRANCH_NAME="${{ env.BRANCH_NAME }}"
           BRANCH_NAME=${BRANCH_NAME////-}
-          BRANCH_NAME=${BRANCH_NAME/_/-}
-          echo ID=${BRANCH_NAME} >> $GITHUB_ENV
+          echo BRANCH=${BRANCH_NAME} >> $GITHUB_ENV
+          echo ARCH=${uname -m} >> $GITHUB_ENV
 
       - name: Build Algae Executable 🏗️
         env:
-          EXEC_NAME: ${{ format('viridian-algae-executable-{0}', env.ID) }}
+          EXEC_NAME: ${{ format('viridian-algae-executable-{0}-{1}', env.BRANCH, env.ARCH) }}
         run: poetry -C viridian/algae run compile ${{ env.EXEC_NAME }}.run
+
+      - name: Build Caerulean Installer 📥
+        env:
+          EXEC_NAME: ${{ format('caerulean-installer-{0}', env.BRANCH) }}
+        run: poetry -C viridian/algae run bundle ${{ env.EXEC_NAME }}.pyz
 
       - name: Save Artifact 🏺
         uses: actions/upload-artifact@v4
         with:
           name: algae-executable
-          path: viridian/algae/dist/
           retention-days: 3
           if-no-files-found: error
+          path: |
+            viridian/algae/dist/*.run
+            virdian/algae/*.pyz
 
   caerulean-whirlpool-build:
     name: Build Caerulean Whirlpool Server Executable
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [amd64, arm64]
 
     steps:
       - name: Checkout 🛎️
@@ -85,27 +95,23 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 
-      - name: Create Executable ID 📛
-        id: id-creator
+      - name: Create Executable Branch Name 🌱
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
           BRANCH_NAME="${{ env.BRANCH_NAME }}"
           BRANCH_NAME=${BRANCH_NAME////-}
-          BRANCH_NAME=${BRANCH_NAME/_/-}
-          echo ID=${BRANCH_NAME} >> $GITHUB_ENV
+          echo BRANCH=${BRANCH_NAME} >> $GITHUB_ENV
 
       - name: Build Caerulean Whirlpool 🏗️
         env:
-          EXEC_NAME: ${{ format('caerulean-whirlpool-executable-{0}', env.ID) }}
+          EXEC_NAME: ${{ format('caerulean-whirlpool-executable-{0}-{1}', env.BRANCH, matrix.arch) }}
         run: EXEC_NAME=${{ env.EXEC_NAME }}.run make -C caerulean/whirlpool build
 
       - name: Save Artifact 🏺
         uses: actions/upload-artifact@v4
         with:
-          name: whirlpool-executable
-          path: |
-            caerulean/whirlpool/build/
-            caerulean/whirlpool/whirlpool.sh
+          name: whirlpool-executable-${{ matrix.arch }}
+          path: caerulean/whirlpool/build/*.run
           retention-days: 3
           if-no-files-found: error
